Fix Vercel authentication issue

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,13 @@
       "src": "/(.*)",
       "dest": "/src/index.js"
     }
-  ]
+  ],
+  "functions": {
+    "src/index.js": {
+      "maxDuration": 30
+    }
+  },
+  "github": {
+    "silent": true
+  }
 }
