Remove vercel.json for cleaner deployments

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "podium-scheduler-backend",
   "version": "1.0.0",
   "description": "Backend for Podium Scheduler",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node index.js",
+    "dev": "nodemon src/index.js",
+    "build": "echo 'No build required'"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
